Fix: Prevent scrolling on mobile devices by adding global overflow hidden

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   background-image: linear-gradient(
       rgba(131, 80, 219, 0.8),
       rgba(131, 80, 219, 0.8)
